# orka-miniexample

./: .gitmodules  3fd3a845-59f5-4393-adf6-5f6551fba982.json  CMakeLists.txt  README
src/: ORKAFPGAs.json  ORKAInterpreter.json  build_infrastructure  build_ip  build_ip.tcl
src/firstip/: firstip.cpp  settings.tcl  sourcefiles.tcl  testbench.cpp
src/hostprogram/: accelerator.h  hostprogram.cpp  orka.h
src/secondip/: secondip.cpp  settings.tcl  sourcefiles.tcl  testbench.cpp
